# HybridQCCNN

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.zh-CN.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
backend/: FashionMNIST_Class_Info.json  app.py
components/: __init__.py  qkernel.py  quanv.py
configs/benchmark/: classic_fashionmnist.yaml  hybrid_fashionmnist.yaml
configs/googlenet/: classic_googlenet_cifar10.yaml  hybrid_googlenet_cifar10.yaml
configs/resnet/: classic_resnet_cifar10.yaml  hybrid_resnet_cifar10.yaml
configs/vgg/: classic_vgg_cifar10.yaml  hybrid_vgg_cifar10.yaml
examples/: config_demo.py  example_datasets.py  example_datasets_split.py  example_datasets_utils.py  example_models.py  example_plot_activation_func.py  example_plot_bloch_sphere.py  example_plot_evaluation_metrics.py  example_plot_qcircuit.py  example_qkernel.py  example_quafu_hybrid_net.py  example_quafu_qkernel.py  example_quafu_quanv.py  example_quanv.py  example_transforms4quantum.py  googlenet_demo.py  model_management_demo.py  qkernel_demo.py  quanv2d_demo.py  resnet_demo.py  training_demo.py  visualization_demo.py
examples/components_demo/: qkernel_demo.py  quanv2d_demo.py
examples/config_demo/: config_demo.py
examples/custom_demo/: custom_net.py  my_custom_dataset.py  simple_image_dataset.py
examples/models_demo/: benchmark_demo.py  googlenet_demo.py  resnet_demo.py  vgg_demo.py
examples/utils_demo/: dataset_demo.py  model_management_demo.py  training_demo.py  visualization_demo.py
models/: __init__.py  benchmark_classic.py  benchmark_hybrid.py  hybrid_googlenet.py  hybrid_resnet.py  hybrid_vgg.py  simple_googlenet.py  simple_resnet.py  simple_vgg.py
notebook/: all_in_one.ipynb  experiment.ipynb
src/: main.py
src/components/: __init__.py  qkernel.py  quanv.py
src/config/: __init__.py  manager.py  schema.py
src/models/: __init__.py
src/models/benchmark/: __init__.py  classic_net.py  hybrid_net.py
src/models/googlenet/: __init__.py  hybrid_googlenet.py  simple_googlenet.py
src/models/resnet/: __init__.py  hybrid_resnet.py  simple_resnet.py
src/models/vgg/: __init__.py  hybrid_vgg.py  simple_vgg.py
src/utils/: __init__.py
src/utils/data_management/: __init__.py  dataset_manager.py
src/utils/model_management/: __init__.py  model_manager.py
src/utils/training/: __init__.py  metrics.py  trainer.py
src/utils/visualization/: __init__.py  metrics_plot.py  model_plot.py  quantum_plot.py
templates/: custom_dataset.py  custom_net.py  template.yaml
tests/: conftest.py
tests/components/: test_qkernel.py  test_quanv.py
tests/config/: test_config.py
tests/models/benchmark/: test_benchmark_nets.py
tests/models/googlenet/: test_googlenet_nets.py
tests/models/resnet/: test_resnet_nets.py
tests/models/vgg/: test_vgg_nets.py
tests/utils/data_management/: test_dataset_manager.py
tests/utils/model_management/: test_model_manager.py
tests/utils/training/: test_training.py
tests/utils/visualization/: test_visualization.py
utils/: __init__.py  datasets_utils.py  model_predict.py  model_test.py  model_train.py  model_utils.py  transforms4quantum.py  visualization.py
