# pyproject.toml

# Build System
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Project Information
[project]
name = "hybrid-qccnn"
version = "0.1.0"
description = "A hybrid quantum-classical convolutional neural network implementation."
readme = "README.md"
authors = [
    {name = "BaizeXS", email = "baizexs@gmail.com"},
]
keywords = ["quantum", "cnn", "deep-learning"]

# Python Version Requirements
requires-python = ">=3.10"

# Dependencies
dependencies = [
    "torch",
    "pennylane",
    "numpy"
]

# Optional Dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
    "flake8-pyproject"
]

# Project URLs
[project.urls]
Homepage = "https://github.com/BaizeXS/HybridQCCNN"

# Formatting
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | docs
)/
'''

# Sorting
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# Linting
[tool.flake8]
max-line-length = 88
max-blank-lines = 2
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]

docstring-convention = "google"
